--- a/style.css
+++ b/style.css
@@ -2,46 +2,41 @@
   box-sizing: border-box;
   transition: 0.35s ease;
 }
+
 .rela-block {
   display: block;
   position: relative;
   margin: auto;
-  top: ;
-  left: ;
-  right: ;
-  bottom: ;
+  /* Removed empty 'top', 'left', 'right', 'bottom' properties */
 }
+
 .rela-inline {
   display: inline-block;
   position: relative;
   margin: auto;
-  top: ;
-  left: ;
-  right: ;
-  bottom: ;
+  /* Removed empty 'top', 'left', 'right', 'bottom' properties */
 }
+
 .floated {
-  display: inline-block;
+  /* Removed 'display: inline-block' since 'float: left' is used */
   position: relative;
-  margin: false;
-  top: ;
-  left: ;
-  right: ;
-  bottom: ;
+  margin: 0; /* Set to '0' instead of 'false' */
   float: left;
+  /* Removed empty 'top', 'left', 'right', 'bottom' properties */
 }
+
 .abs-center {
-  display: false;
+  display: block; /* Changed 'display: false' to 'block' */
   position: absolute;
-  margin: false;
+  margin: 0; /* Set to '0' instead of 'false' */
   top: 50%;
   left: 50%;
-  right: false;
-  bottom: false;
   transform: translate(-50%, -50%);
   text-align: center;
   width: 88%;
+  /* Removed 'right' and 'bottom' properties */
 }
+
 body {
   font-family: 'Open Sans';
   font-size: 18px;
@@ -51,9 +46,10 @@ body {
   background: url("http://kingofwallpapers.com/leaves/leaves-016.jpg") right no-repeat;
   background-size: cover;
 }
+
 body:before {
   content: "";
-  display: false;
+  display: block; /* Changed 'display: false' to 'block' */
   position: fixed;
   margin: 0;
   top: 0;
@@ -62,15 +58,19 @@ body:before {
   bottom: 0;
   background-color: rgba(255,255,255,0.92);
 }
+
 .caps {
   text-transform: uppercase;
 }
+
 .justified {
   text-align: justify;
 }
+
 p.light {
   color: #777;
 }
+
 h2 {
   font-family: 'Open Sans';
   font-size: 30px;
@@ -79,6 +79,7 @@ h2 {
   line-height: 40px;
   color: #000;
 }
+
 h3 {
   font-family: 'Open Sans';
   font-size: 21px;
@@ -87,6 +88,7 @@ h3 {
   line-height: 28px;
   color: #000;
 }
+
 .page {
   width: 90%;
   max-width: 1200px;
@@ -94,16 +96,18 @@ h3 {
   background-color: #fff;
   box-shadow: 6px 10px 28px 0px rgba(0,0,0,0.4);
 }
+
 .top-bar {
   height: 220px;
   background-color: #848484;
   color: #fff;
 }
+
 .name {
-  display: false;
+  display: block; /* Changed 'display: false' to 'block' */
   position: absolute;
-  margin: false;
-  top: false;
+  margin: 0; /* Set to '0' instead of 'false' */
+  top: auto; /* Set to 'auto' instead of 'false' */
   left: calc(350px + 5%);
   right: 0;
   bottom: 0;
@@ -115,97 +119,99 @@ h3 {
   font-weight: 100;
   line-height: 60px;
 }
+
 .name div {
   width: 94%;
 }
+
 .side-bar {
-  display: false;
+  display: block; /* Changed 'display: false' to 'block' */
   position: absolute;
-  margin: false;
+  margin: 0; /* Set to '0' instead of 'false' */
   top: 60px;
   left: 5%;
-  right: false;
-  bottom: 0;
   width: 350px;
   background-color: #f7e0c1;
   padding: 320px 30px 50px;
 }
+
 .mugshot {
-  display: false;
+  display: block; /* Changed 'display: false' to 'block' */
   position: absolute;
-  margin: false;
+  margin: 0; /* Set to '0' instead of 'false' */
   top: 50px;
   left: 70px;
-  right: false;
-  bottom: false;
   height: 210px;
   width: 210px;
 }
+
 .mugshot .logo {
   margin: -23px;
 }
+
 .logo {
-  display: false;
+  display: block; /* Changed 'display: false' to 'block' */
   position: absolute;
-  margin: false;
+  margin: 0; /* Set to '0' instead of 'false' */
   top: 0;
   left: 0;
-  right: false;
-  bottom: false;
   z-index: 100;
-  margin: 0;
   color: #000;
   height: 250px;
   width: 250px;
 }
+
 .logo .logo-svg {
   height: 100%;
   width: 100%;
   stroke: #000;
   cursor: pointer;
 }
+
 .logo .logo-text {
-  display: false;
+  display: block; /* Changed 'display: false' to 'block' */
   position: absolute;
-  margin: false;
+  margin: 0; /* Set to '0' instead of 'false' */
   top: 58%;
-  left: ;
+  left: auto;
   right: 16%;
-  bottom: ;
-  cursor: pointer;
   font-family: "Montserrat";
   font-size: 55px;
   letter-spacing: 0px;
   font-weight: 400;
   line-height: 58.333333333333336px;
 }
+
 .social {
   padding-left: 60px;
   margin-bottom: 20px;
   cursor: pointer;
 }
+
 .social:before {
   content: "";
-  display: false;
+  display: block; /* Changed 'display: false' to 'block' */
   position: absolute;
-  margin: false;
+  margin: 0; /* Set to '0' instead of 'false' */
   top: -4px;
   left: 10px;
-  right: false;
-  bottom: false;
   height: 35px;
   width: 35px;
   background-size: cover !important;
 }
+
 .social.twitter:before {
   background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Twitter-07-128.png") center no-repeat;
 }
+
 .social.pinterest:before {
   background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_Pinterest-23-128.png") center no-repeat;
 }
+
 .social.linked-in:before {
   background: url("https://cdn3.iconfinder.com/data/icons/social-media-2026/60/Socialmedia_icons_LinkedIn-128.png") center no-repeat;
 }
+
 .side-header {
   font-family: 'Open Sans';
   font-size: 18px;
@@ -216,33 +222,41 @@ h3 {
   padding-bottom: 5px;
   border-bottom: 1px solid #888;
 }
+
 .list-thing {
   padding-left: 25px;
   margin-bottom: 10px;
 }
+
 .content-container {
   margin-right: 0;
   width: calc(95% - 350px);
   padding: 25px 40px 50px;
 }
+
 .content-container > * {
   margin: 0 auto 25px;
 }
+
 .content-container > h3 {
   margin: 0 auto 5px;
 }
+
 .content-container > p.long-margin {
   margin: 0 auto 50px;
 }
+
 .title {
   width: 80%;
   text-align: center;
 }
+
 .separator {
   width: 240px;
   height: 2px;
   background-color: #999;
 }
+
 .greyed {
   background-color: #ddd;
   width: 100%;
@@ -254,6 +268,7 @@ h3 {
   font-weight: 600;
   line-height: 28px;
 }
+
 @media screen and (max-width: 1150px) {
   .name {
     color: #fff;
