--- a/style.css
+++ b/style.css
@@ -279,3 +279,14 @@ h3 {
     line-height: 48px;
   }
 }
+
+.rela-block {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.rela-block.in-view {
+  opacity: 1;
+  transform: translateY(0);
+}
